--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,19 @@
-server.port = 9991
-
-spring.jpa.hibernate.ddl-auto=create
-spring.datasource.url=jdbc:mysql://db-service:3306/mydb
-spring.datasource.username=djs
-spring.datasource.password=djs
-spring.datasource.initialization-mode=always
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
-
+server.port = 9091
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:testdb
 #spring.datasource.username=sa
 #spring.datasource.password=sa
-#spring.datasource.url=jdbc:mysql://localhost:3306/testdb
-#spring.datasource.username=sa
-#spring.datasource.password=sa
-#spring.datasource.driver-class-gname=com.mysql.jdbc.Driver
-#spring.jpa.hibernate.ddl-auto=update
-#hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.globally_quoted_identifiers=true
+spring.datasource.url=jdbc:mysql://localhost:3306/testdb
+spring.datasource.username=sa
+spring.datasource.password=sa
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.hibernate.ddl-auto=update
+hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.globally_quoted_identifiers=true
 file.image-dir=C:\\workspace\\restaurant-project\\src\\main\\resources\\static\\img\\menuPicture\\
-#server.error.include-message=always
+server.error.include-message=always
 
 
 
