--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,9 @@
 server.port = 9091
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
-#spring.h2.console.enabled=true
-#spring.datasource.url=jdbc:h2:mem:testdb
-#spring.datasource.username=sa
-#spring.datasource.password=sa
-spring.datasource.url=jdbc:mysql://localhost:3306/testdb
-spring.datasource.username=sa
-spring.datasource.password=sa
+spring.datasource.url=jdbc:mysql://db-service:3306/testdb
+spring.datasource.username=djs
+spring.datasource.password=djs
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
